--- a/unpackage/test_md5.html
+++ b/unpackage/test_md5.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+
+    <script src="../js/md5.js"></script>
+    <script type="application/javascript">
+        let hashCode = md5("i am lzc")
+        alert(hashCode)
+    </script>
+
 </head>
 <body>
-$END$
+
 </body>
 </html>
